--- a/src/assets/couch/couch.css
+++ b/src/assets/couch/couch.css
@@ -8,7 +8,6 @@
   --blue__light: #6c66ce;
   --blue__dark: #322ca9;
   --font: 'IBM Plex Sans', sans-serif;
-  --font__header: 'EB Garamond', serif;
   --font__style: 'Handlee', cursive;
 }
 
@@ -20,19 +19,20 @@
 
 body {
   background: var(--pink);
-  font-family: var(--font);
   line-height: 1.5;
 }
 
-h1, h2, h3 {
+#sections h1, 
+#sections h2, 
+#sections h3 {
   font-family: var(--font__style);
   text-transform: uppercase;
 }
 
-
-header * {
-  font-family: var(--font__header);
+#sections {
+  font-family: var(--font);
 }
+
 
 #top img {
   width: 100%;
@@ -127,130 +127,5 @@ dt {
 @media screen and (max-width: 200px) {
   .sponsor-list {
     grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* Common - Write page code above this */
-
-header {
-  width: 100%;
-}
-header * {
-  color: white;
-  text-decoration: none;
-  font-family: var(--font__header);
-}
-header #mobile, header .m {
-  display: none;
-}
-header #primary {
-  background: var(--blue__dark);
-  padding: 0.5em 0.75em;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-header #primary span {
-  margin-right: auto;
-}
-header #primary a {
-  margin-left: 1em;
-}
-header #secondary {
-  background: var(--blue);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-header #secondary a.main {
-  font-family: var(--font);
-  font-weight: 700;
-}
-header #secondary > * {
-  border-right: 1px solid var(--blue__light);
-  padding: 0.75em 1em;
-}
-header #secondary a:last-child {
-  border-right: 0;
-}
-@media screen and (max-width: 800px) {
-  header .m {
-    display: block;
-  }
-  header #mobile {
-    background: var(--blue__dark);
-    padding: 0.5em 0.75em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  header #mobile a {
-    font-family: var(--font);
-    font-weight: 700;
-  }
-  header #mobile span {
-    cursor: pointer;
-  }
-  header #primary,
-  header #secondary,
-  header #secondary a.main {
-    display: none;
-  }
-  header .on {
-    display: block !important;
-  }
-  header #secondary > * {
-    border: none;
-    display: block;
-  }
-}
-
-footer {
-  background: var(--blue);
-  color: white;
-  padding: 0.5em;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2em;
-  line-height: 1.5;
-}
-footer > * {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-footer .left {
-  text-align: left;
-}
-footer .left p {
-  margin-bottom: 1em;
-  font-family: var(--font);
-  font-weight: 700;
-}
-footer .right {
-  text-align: right;
-}
-footer .right a {
-  display: block;
-  line-height: 2;
-}
-footer a {
-  color: inherit;
-  text-decoration: none;
-}
-@media screen and (max-width: 800px) {
-  footer {
-    grid-template-columns: 1fr;
-    grid-gap: 0;
-  }
-  footer .left {
-    text-align: center;
-  }
-  footer .right * {
-    display: none !important;
-  }
-  footer .right a:last-child {
-    display: block !important;
-    text-align: center;
   }
 }
