--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -22,7 +22,8 @@ sponsor-list:
   <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Handlee&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Handlee&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/tailwind.css">
   <link rel="stylesheet" href="/assets/couch/couch.css">
 </head>
 <body>
