--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -4,11 +4,11 @@
     <div class="lg:w-0 lg:flex-1">
       <a href="/" class="flex items-center">
         <img class="h-8 w-auto sm:h-10" src="/assets/img/fist.svg" alt="Fist with Code Tattoo">
-        <h1 class="sm:text-l lg:text-2xl pl-4 font-bold text-pink-600">You Got This</h1>
+        <h1 class="sm:text-l lg:text-2xl pl-4 font-bold text-gray-900">You Got This</h1>
       </a>
     </div>
     <div id="mobile-menu-open" class="-mr-2 -my-2 md:hidden">
-      <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
+      <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" aria-label="Open Menu">
         <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
@@ -37,7 +37,7 @@
               <img class="h-8 w-auto" src="/assets/img/fist.svg" alt="Fist with Code Tattoo">
             </a>
             <div class="-mr-2">
-              <button id="mobile-menu-close" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
+              <button id="mobile-menu-close" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" aria-label="Close Menu">
                 <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
                 </svg>
