--- a/src/_includes/talk_card.liquid
+++ b/src/_includes/talk_card.liquid
@@ -7,8 +7,7 @@
     </p>
   </div>
   <div class="flex items-center px-6 pb-6">
-  {% comment %} TODO: Add Avatars {% endcomment %}
-    <img class="w-10 h-10 rounded-full mr-4" src="https://api.adorable.io/avatars/285/abott@adorable.png" alt="Avatar of Jonathan Reinink">
+    <img class="w-10 h-10 rounded-full mr-4" src="/assets/img/speakers/{{talk.data.speaker.photo}}" alt="Photo of {{talk.data.speaker.name}}">
     <div class="text-sm">
       <p class="text-gray-900 leading-none">{{talk.data.speaker.name}}</p>
       {% if talk.data.speaker.twitter %}
