--- a/src/_includes/home_hero.liquid
+++ b/src/_includes/home_hero.liquid
@@ -15,6 +15,8 @@
           </p>
           <form class="mt-3 sm:flex" action="https://buttondown.email/api/emails/embed-subscribe/yougotthisconf" method="post" target="popupwindow" onsubmit="window.open('https://buttondown.email/yougotthisconf', 'popupwindow')">
             <input aria-label="Email" class="appearance-none w-full px-5 py-3 border text-base leading-6 rounded-md text-gray-900 bg-white placeholder-gray-500 focus:border-pink-600 focus:placeholder-gray-400 transition duration-150 ease-in-out sm:flex-1" required placeholder="Enter your email"  name="email" id="bd-email">
+            <input type="hidden" name="tag" value="ygt-site">
+            <input type="hidden" value="1" name="embed">
             <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-gray-800 shadow-sm hover:bg-gray-700 focus:outline-none focus:border-gray-900 focus:shadow-outline-gray active:bg-gray-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">Register</button>
           </form>
           <p class="mt-3 text-sm leading-5 text-gray-700">
