--- a/src/_includes/newsletter_cta.liquid
+++ b/src/_includes/newsletter_cta.liquid
@@ -12,7 +12,8 @@
       <div class="mt-8 sm:w-full sm:max-w-md xl:mt-0 xl:ml-8">
         <form class="sm:flex" aria-labelledby="newsletter-headline" action="https://buttondown.email/api/emails/embed-subscribe/yougotthisconf" method="post" target="popupwindow" onsubmit="window.open('https://buttondown.email/yougotthisconf', 'popupwindow')">
           <input aria-label="Email address" type="email" required class="appearance-none w-full px-5 py-3 border border-transparent text-base leading-6 rounded-md text-gray-900 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 transition duration-150 ease-in-out" placeholder="Enter your email" name="email" id="bd-email">
-          <input type="hidden" value="1" name="embed"></input>
+          <input type="hidden" value="1" name="embed">
+          <input type="hidden" name="tag" value="ygt-site">
           <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3 sm:flex-shrink-0">
             <button class="w-full flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-500 hover:bg-pink-400 focus:outline-none focus:bg-pink-400 transition duration-150 ease-in-out">
               Register
