--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -23,7 +23,7 @@ sponsor-list:
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/couch/couch.css">
 </head>
 <body>
